--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
     "react-vertical-timeline-component": "^3.5.3",
